# communityEvolution

./: .gitignore  CMakeLists.txt  LICENSE  README.md  communityEvolution.sln
bachelorInterface/: CMakeLists.txt  stdafx.cpp
bachelorInterface/header/: host_user_interaction.h
bachelorInterface/source/: ResultItem.h  community_evolution_main.cpp  host_user_interaction.cpp
communityEvolutionDll/: CMakeLists.txt  ReadMe.txt  algorithm_clique.cu  algorithm_event_extraction.cu  algorithm_propinquity.cu  check_settings.cu  communityEvolutionDll.vcxproj  communityEvolutionDll.vcxproj.filters  data_info.cu  data_source.cpp  device_analytic.cu  device_analytic_structs.cu  device_convert.cu  device_help.cu  device_pair.cu  device_pair_construct.cu  device_pair_structs.cu  device_storage_serilization.cu  display_elements-impl.cu  display_elements.cu  display_elements_test.cu  dllmain.cpp  general_arithmetic_structs.cu  general_comparsion.cu  general_comparsion_structs.cu  general_pair.cpp  general_pair_structs.cu  general_search.cu  general_structs.cu  host_algorithm_clique.cu  host_algorithm_event_extraction.cu  host_algorithm_propinquity.cu  host_analytic.cu  host_convert.cu  host_pair.cu  host_pair_construct.cu  host_storage_human.cpp  host_storage_serilization.cpp  matrix_calculation.cu  stdafx.cpp  (+3 more)
communityEvolutionDll/include/: algorithm_clique.h  algorithm_event_extraction.h  algorithm_propinquity.h  check_settings.h  data_info.h  data_source.h  device_analytic.h  device_analytic_structs.h  device_convert.h  device_headers.h  device_help.h  device_pair.h  device_pair_construct.h  device_pair_structs.h  device_storage_serilization.h  display_elements.h  display_elements_test.h  general_arithmetic_structs.h  general_comparsion_structs.h  general_defines.h  general_pair.h  general_pair_structs.h  general_search.h  general_structs.h  host_algorithm_clique.h  host_algorithm_event_extraction.h  host_algorithm_propinquity.h  host_analytic.h  host_convert.h  host_headers.h  host_pair.h  host_pair_construct.h  host_storage_human.h  host_storage_serilization.h  local_host_headers.h  matrix_calculation.h  timing.h
communityEvolutionDll/source/: algorithm_clique.cu  algorithm_event_extraction.cu  algorithm_propinquity.cu  check_settings.cu  data_info.cu  data_source.cpp  device_analytic.cu  device_analytic_structs.cu  device_convert.cu  device_help.cu  device_pair.cu  device_pair_construct.cu  device_pair_structs.cu  device_storage_serilization.cu  display_elements-impl.cu  display_elements.cu  display_elements_test.cu  general_arithmetic_structs.cu  general_comparsion.cu  general_comparsion_structs.cu  general_pair.cpp  general_pair_structs.cu  general_search.cu  general_structs.cu  host_algorithm_clique.cu  host_algorithm_event_extraction.cu  host_algorithm_propinquity.cu  host_analytic.cu  host_convert.cu  host_pair.cu  host_pair_construct.cu  host_storage_human.cpp  host_storage_serilization.cpp  matrix_calculation.cu  timing.cu
communityEvolutionInterface/: CMakeLists.txt  ReadMe.txt  communityEvolutionInterface.vcxproj  communityEvolutionInterface.vcxproj.filters  stdafx.cpp  stdafx.h
communityEvolutionInterface/header/: host_user_interaction.h  host_user_interaction_res.h
communityEvolutionInterface/source/: community_evolution_main.cpp  host_user_interaction.cpp  host_user_interaction_res.cpp
lib/dirent/: LICENSE.txt
storage/intern/: internData00.b  internData01.b  internData022.b  internData0482.b  internData06.b
storage/pairs/: TestPairsClique.txt  TestPairsError.txt  TestPairsPropinquity.txt  TestPairsSimple.txt  TestPairsStorage.txt  matrix.txt  raw100x14x3.txt  raw100x28x7.txt  raw10x14x3.txt  test2810.txt  testBigPairs.b
storage/raw/: ReadMe.md  TestRawEdgesSimple.txt
storage/snaps/: TestSnapsError.txt  TestSnapsSimple.txt  TestSnapsStorage.b  TestSnapsStorage.txt  bigSnaps100x14x3.txt
storage/snapshots/: bigSnaps100x14x3.txt  snapd50000x28x7.txt  snaps10x14x3.txt  snaps30x14x0.txt  snaps50000x28x7.txt  snaps5000x28x7.txt
