cmake_minimum_required (VERSION 2.8.11)

cmake_policy(SET CMP0023 OLD)

file(GLOB_RECURSE BACHELOR_INTERFACE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE BACHELOR_INTERFACE_HDR ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

include_directories(${CMAKE_SOURCE_DIR}/lib/cereal)
include_directories(${CMAKE_SOURCE_DIR}/communityEvolutionDll/include)

add_definitions(
	-DALGORITHMCLIQUEDLL_EXPORTS=false
	-DALGORITHMEVENTEXTRACTIONDLL_EXPORTS=false
	-DALGORITHMPROPINQUITYDLL_EXPORTS=false
	-DGENERALSEARCHDLL_EXPORTS=false
	-DCHECKSETTINGSDLL_EXPORTS=false
	-DDATAINFODLL_EXPORTS=false
	-DDATASOURCEDLL_EXPORTS=false
	-DDEVICEANALYTICDLL_EXPORTS=false
	-DDEVICECONVERTDLL=false
	-DDEVICEHELPDLL_EXPORTS=false
	-DDEVICEPAIRDLL_EXPORTS=false
	-DDEVICEPAIRCONSTRUCTDLL_EXPORTS=false
	-DDEVICESTORAGESERILIZATIONDLL_EXPORTS=false
	-DDISPLAYELEMENTSDLL_EXPORTS=false
	-DDISPLAYELEMENTSTESTDLL_EXPORTS=false
	-DHOSTALGORITHMCLIQUEDLL_EXPORTS=false
	-DHOSTALGORITHMEVENTEXTRACTIONDLL_EXPORTS=false
	-DHOSTALGORITHMPROPINQUITYDLL_EXPORTS=false
	-DHOSTANALYTICDLL_EXPORTS=false
	-DHOSTCONVERTDLL=false
	-DHOSTPAIRDLL_EXPORTS=false
	-DHOSTPAIRCONSTRUCTDLL_EXPORTS=false
	-DHOSTSTORAGEHUMANDLL_EXPORTS=false
	-DHOSTSTORAGESERILIZATIONDLL_EXPORTS=false
	-DMATRIXOPERATIONSDLL=false
	-DTIMINGDLL_EXPORTS=false
	)

cuda_add_executable(bachelorEvolution ${BACHELOR_INTERFACE_SRC} ${BACHELOR_INTERFACE_HDR})
#add_executable(communityEvolution ${INTERFACE_SRC} ${INTERFACE_HDR})
target_link_libraries(bachelorEvolution LINK_PUBLIC communityEvolutionDll)
