cmake_minimum_required (VERSION 2.8.11)

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

file(GLOB_RECURSE DLL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE DLL_CUDA ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
file(GLOB_RECURSE DLL_HDR ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_definitions(
	-DALGORITHMCLIQUEDLL_EXPORTS
	-DALGORITHMEVENTEXTRACTIONDLL_EXPORTS
	-DALGORITHMPROPINQUITYDLL_EXPORTS
	-DGENERALSEARCHDLL_EXPORTS
	-DCHECKSETTINGSDLL_EXPORTS
	-DDATAINFODLL_EXPORTS
	-DDATASOURCEDLL_EXPORTS
	-DDEVICEANALYTICDLL_EXPORTS
	-DDEVICECONVERTDLL
	-DDEVICEHELPDLL_EXPORTS
	-DDEVICEPAIRDLL_EXPORTS
	-DDEVICEPAIRCONSTRUCTDLL_EXPORTS
	-DDEVICESTORAGESERILIZATIONDLL_EXPORTS
	-DDISPLAYELEMENTSDLL_EXPORTS
	-DDISPLAYELEMENTSTESTDLL_EXPORTS
	-DHOSTALGORITHMCLIQUEDLL_EXPORTS
	-DHOSTALGORITHMEVENTEXTRACTIONDLL_EXPORTS
	-DHOSTALGORITHMPROPINQUITYDLL_EXPORTS
	-DHOSTANALYTICDLL_EXPORTS
	-DHOSTCONVERTDLL
	-DHOSTPAIRDLL_EXPORTS
	-DHOSTPAIRCONSTRUCTDLL_EXPORTS
	-DHOSTSTORAGEHUMANDLL_EXPORTS
	-DHOSTSTORAGESERILIZATIONDLL_EXPORTS
	-DMATRIXOPERATIONSDLL
	-DTIMINGDLL_EXPORTS
	)

cuda_add_library(communityEvolutionDll ${DLL_CUDA} ${DLL_SRC} ${DLL_HDR})
target_include_directories(communityEvolutionDll PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
